Updating xms-paths validation to use the validation context. This lets the error appear in-situ, rather than on the entire ServiceDefinition
