# src/modeler/AutoRest.Swagger.Tests/Swagger/Validation/clean-complex-spec.json
@@ -141,6 +141,32 @@
       }
     }
   },
+  "x-ms-paths": {
+    "/foo?overload=true": {
+      "post": {
+        "operationId": "Foo_PostOverload",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "fooPost",
+            "schema": {
+              "type": "object",
+              "description": "A foo object"
+            },
+            "description": "Foo body parameter"
+          },
+          {
+            "$ref": "#/parameters/FooQueryParam"
+          }
+        ],
+        "responses": {
+          "default": {
+            "$ref": "#/responses/FooResponse"
+          }
+        }
+      }
+    }
+  },
   "parameters": {
     "FooQueryParam": {
       "in": "query",
